--- a/landingpage.html
+++ b/landingpage.html
@@ -102,7 +102,7 @@
     <h2>my CSS Project</h2>
     <p>
       a landing page using css
-      <code>:root</code> and CSS variables.
+      :root and CSS variables.
     </p>
     <button class="btn" onclick="toggleTheme()">Get Started</button>
   </section>
